--- a/apps/docs/src/pages/docs/core/concepts.mdx
+++ b/apps/docs/src/pages/docs/core/concepts.mdx
@@ -69,7 +69,7 @@ To ensure that your components have the necessary scripts and styles, you must e
 2.  **Order**: Dependencies are loaded in the correct order based on the component tree.
 3.  **Optimize**: Only the code used on a specific page is sent to the browser.
 
-```typescript
+```tsx
 import { BaseLayout } from '@/layouts/base-layout';
 import { eco, html } from '@ecopages/core';
 
@@ -113,9 +113,7 @@ const MyComponent = eco.component({
       scripts: ['./heavy-script.ts'],
     }
   },
-  render: () => html`
-  <div>Heavy Content</div>
-  `
+  render: () => html`<div>Heavy Content</div>`
 });
 ```
 
