--- a/playground/react-router/src/pages/mdx-example.mdx
+++ b/playground/react-router/src/pages/mdx-example.mdx
@@ -42,6 +42,7 @@ Check out the other pages:
 - [Home](/)
 - [About](/about)
 - [Hello World Post](/posts/hello-world)
+- [MDX Page 2](/mdx-page-2)
 
 ---
 
