feat(react-mdx): add MDX page support and navigation tests; update eco.config.ts for MDX integration

--- a/e2e/fixtures/react-router-app/src/pages/docs.mdx
+++ b/e2e/fixtures/react-router-app/src/pages/docs.mdx
@@ -5,18 +5,18 @@ export const config = {
 };
 
 export const getMetadata = () => ({
-  title: 'MDX Page',
-  description: 'Testing MDX support',
+  title: 'Docs',
+  description: 'Documentation page',
 });
 
-# MDX Page
+# Documentation
 
-This is a **Markdown** page with layout.
+This is a **documentation** page with a layout.
 
-<div data-testid="mdx-content">
+<div data-testid="docs-page">
   <nav>
     <a href="/" data-testid="link-home">Home</a>
-    <a href="/docs" data-testid="link-docs">Docs</a>
+    <a href="/mdx-page" data-testid="link-mdx">MDX Page</a>
     <a href="/about" data-testid="link-about">About</a>
   </nav>
 </div>
