feat(core): pages directory is not mandatory anymore. Set default public directory to root.

--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -103,7 +103,7 @@ export default config;
 <ApiField
 	name="robotsTxt"
 	type="{ preferences: RobotsPreference }"
-	defaultValue={`{ preferences: { "*": [], Googlebot: ["/public/"] } }`}
+	defaultValue={`{ preferences: { "*": [] } }`}
 	setter="setRobotsTxt"
 >
 	Configuration for the robots.txt file.
