--- a/apps/docs/src/pages/docs/ecosystem/image-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/image-processor.mdx
@@ -37,8 +37,8 @@ const imageProcessor = new ImageProcessorPlugin({
 	type: 'image',
 	options: {
 		sourceDir: path.resolve(import.meta.dir, 'src/images'),
-		outputDir: path.resolve(import.meta.dir, '.eco/public/images'),
-		publicPath: '/public/images',
+		outputDir: path.resolve(import.meta.dir, '.eco/images'),
+		publicPath: '/images',
 		acceptedFormats: ['jpg', 'jpeg', 'png', 'webp'],
 		quality: 80,
 		format: 'webp',
