feat(docs): add routing patterns documentation and update explicit routing references

--- a/apps/docs/src/pages/docs/server/explicit-routing.mdx
+++ b/apps/docs/src/pages/docs/server/explicit-routing.mdx
@@ -21,6 +21,8 @@ While file-system routing via the `pages/` directory works well for many use cas
 - **Control**: Clear overview of all routes in one place
 - **Freedom**: Choose your own architecture (MVC, handlers, services)
 
+For architectural patterns and code organization examples, see [Routing Patterns](./routing-patterns).
+
 ## Basic Routes
 
 Define routes using HTTP method functions on your `EcopagesApp` instance:
