--- a/apps/docs/src/pages/docs/server/routing-patterns.mdx
+++ b/apps/docs/src/pages/docs/server/routing-patterns.mdx
@@ -1,4 +1,5 @@
 import { DocsLayout } from '@/layouts/docs-layout';
+import { Banner } from '@/components/banner/banner.kita';
 
 export const config = {
 	layout: DocsLayout,
@@ -62,6 +63,14 @@ export const PostView = ({ title, content }: { title: string; content: string })
   `;
 };
 ```
+
+<Banner type="info">
+  <Banner.Title>Preload Configuration Required</Banner.Title>
+  <p>Ensure your <code>eco.config.ts</code> is preloaded in <code>bunfig.toml</code> so integrations load correctly with explicit routes.</p>
+  ```toml
+  preload = ["./eco.config.ts"]
+  ```
+</Banner>
 
 ## Pattern A: Inline Handlers
 
